# selenium-boilerplate

./: .env  Base.py  README.md  config.py  config.yml  cookiecutter.json  pyproject.toml  {{cookiecutter.file_name}}.py
pages/: base_page.py  locators.py  login_page.py
utils/: Config.py  Driver.py  helpers.py
{{cookiecutter.project_name}}/: .env  .gitignore  Makefile  config.py  pyproject.toml  {{cookiecutter.app_name}}.py
{{cookiecutter.project_name}}/db/: db.py
{{cookiecutter.project_name}}/pages/: base_page.py  login_page.py  main_page.py
{{cookiecutter.project_name}}/utils/: Driver.py  helpers.py
