[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Viktor Sokolov <viktorsokolov.and@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
webdriver_manager = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
