[tool.poetry]
name = "Selenium-Boilerplate"
version = "0.1.0"
description = "Selenium project for automation"
authors = ["Viktor Sokolov <viktorsokolov.and@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
webdriver_manager = "^3.2.1"
python-dotenv = "^0.14.0"
pyinstaller = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
